fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ nav a {
 
 main {
     background-color: lightgrey;
-    float: right;
+    float: left;
     width: 20%;
     padding: 20px;
 }
